// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defaults $schema should return default value 1`] = `"https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json"`;

exports[`defaults adjustForPerspective should return correct value when system-instance-perspective is given 1`] = `
{
  "apiResources": [
    {
      "resourceDefinitions": [
        {
          "url": "dummy/dummy.oas3.json?perspective=system-instance",
        },
      ],
    },
  ],
  "eventResources": [
    {
      "resourceDefinitions": [
        {
          "url": "dummy/dummy.asyncapi2.json?perspective=system-instance",
        },
      ],
    },
  ],
  "perspective": "system-instance",
}
`;

exports[`defaults adjustForPerspective should return correct value when system-instance-version is given 1`] = `
{
  "apiResources": [
    {
      "resourceDefinitions": [
        {
          "url": "dummy/dummy.oas3.json",
        },
      ],
    },
  ],
  "describedSystemVersion": {
    "version": "1.0",
  },
  "eventResources": [
    {
      "resourceDefinitions": [
        {
          "url": "dummy/dummy.asyncapi2.json",
        },
      ],
    },
  ],
  "perspective": "system-version",
}
`;

exports[`defaults baseTemplate should return correct value when no tenant is given and toggles & extensions are disabled 1`] = `
{
  "openResourceDiscoveryV1": {
    "documents": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-version",
        "url": "/ord/v1/documents/ord-document?part=0",
      },
    ],
  },
}
`;

exports[`defaults baseTemplate should return correct value when no tenant is given and toggles & extensions are enabled 1`] = `
{
  "openResourceDiscoveryV1": {
    "documents": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-version",
        "url": "/ord/v1/documents/ord-document?part=0",
      },
    ],
  },
}
`;

exports[`defaults baseTemplate should return correct value when tenant is given and extensions are enabled 1`] = `
{
  "openResourceDiscoveryV1": {
    "documents": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-version",
        "url": "/ord/v1/documents/ord-document?part=0",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-instance",
        "url": "/ord/v1/documents/ord-document?part=0&perspective=system-instance",
      },
    ],
  },
}
`;

exports[`defaults baseTemplate should return correct value when tenant is given and only toggles are enabled 1`] = `
{
  "openResourceDiscoveryV1": {
    "documents": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-version",
        "url": "/ord/v1/documents/ord-document?part=0",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-instance",
        "url": "/ord/v1/documents/ord-document?part=0&perspective=system-instance",
      },
    ],
  },
}
`;

exports[`defaults baseTemplate should return correct value when tenant is given and toggles & extensions are enabled 1`] = `
{
  "openResourceDiscoveryV1": {
    "documents": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-version",
        "url": "/ord/v1/documents/ord-document?part=0",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-instance",
        "url": "/ord/v1/documents/ord-document?part=0&perspective=system-instance",
      },
    ],
  },
}
`;

exports[`defaults baseTemplate should return correct value when tenant is not given and only extensions are enabled 1`] = `
{
  "openResourceDiscoveryV1": {
    "documents": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-version",
        "url": "/ord/v1/documents/ord-document?part=0",
      },
    ],
  },
}
`;

exports[`defaults baseTemplate should return correct value when tenant is not given and only toggles are enabled 1`] = `
{
  "openResourceDiscoveryV1": {
    "documents": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "perspective": "system-version",
        "url": "/ord/v1/documents/ord-document?part=0",
      },
    ],
  },
}
`;

exports[`defaults description should return default value 1`] = `"this is an application description"`;

exports[`defaults groupTypeId should return default value 1`] = `"sap.cds:service"`;

exports[`defaults openResourceDiscovery should return default value 1`] = `"1.15"`;

exports[`defaults policyLevels should return default value 1`] = `
[
  "none",
]
`;
